unsetenv() should remove *any* occurence of name=value. As with putenv() both value and name can be modified afterwise in our back, multiple occurence of the same name is a possibility. Fix #6706.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38904 a95241bf-73f2-0310-859d-f6bbb57e9c96